[tool.poetry]
name = "iProject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "openai@0"}]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
openai = "^0.28.0"
playsound = "1.3.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
